Corrcción general de estilo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <header class="navbar-fixed" id="header">
-    <nav class="" role="navigation" id="nav-bar">
+    <nav class="" role="navigation" id="navbar">
       <div class="nav-wrapper container">
         <!-- <div class="brand-logo"> -->
         <a class="brand-logo" id="" href="#" class="brand-logo">
@@ -33,7 +33,7 @@
             <a href="#">Home</a>
           </li>
           <li>
-            <a href="#mis-proyectos">My Proyects</a>
+            <a href="#projects">My Proyects</a>
           </li>
           <li>
             <a href="#contact-us">Contact Us</a>
@@ -46,7 +46,7 @@
             <a href="#">Home</a>
           </li>
           <li>
-            <a href="#mis-proyectos">My Proyects</a>
+            <a href="#projects">My Proyects</a>
           </li>
           <li>
             <a href="#contact-us">Contact Us</a>
@@ -59,7 +59,7 @@
 
   <main>
 
-    <section class="row welcome-section">
+    <section class="row welcome-section" id="welcome-section">
       <div class="container center">
         <div class="welcome-text">
           <h1 class="titulo">Hey we are Lionwebdesign</h1>
@@ -68,7 +68,7 @@
       </div>
     </section>
 
-    <section class="row projects valign-wrapper" id="mis-proyectos">
+    <section class="row projects valign-wrapper" id="projects">
       <div class="contenedor-projectos">
         <div class="container texto-proyectos center">
           <h2 class="titulo">These are some of ours products</h2>
@@ -84,7 +84,7 @@
                   src="./media/Shinichiro_Sakurai_and_his_boss_Takuya_Himura_circa_1954_at_Prince_Motor_Copany_Mitaka_Plant_in_Mitaka,_Tokyo,_Japan.jpg">
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Tribute Page<i
+                <span class="card-title activator grey-text text-darken-4 project-tile">Tribute Page<i
                     class="material-icons right">more_vert</i></span>
                 <p><a href="https://lionwebdesign.github.io/Tribute-Page/" target="_blanck">Read more</a></p>
               </div>
@@ -102,7 +102,7 @@
                 <img class="activator" src="./media/chart-close-up-data-desk-590022.jpg">
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Survey Form<i
+                <span class="card-title activator grey-text text-darken-4 project-tile">Survey Form<i
                     class="material-icons right">more_vert</i></span>
                 <p><a href="https://lionwebdesign.github.io/survey-form/" target="_blanck">See the proyect</a></p>
               </div>
@@ -120,7 +120,7 @@
                 <img class="activator" src="./media/cafe-racer-frame-garage-making-1599.jpg">
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Landing Page<i
+                <span class="card-title activator grey-text text-darken-4 project-tile">Landing Page<i
                     class="material-icons right">more_vert</i></span>
                 <p><a href="https://lionwebdesign.github.io/landing-page/" target="_blanck">See more</a></p>
               </div>
@@ -138,7 +138,7 @@
                 <img class="activator" src="./media/batch-books-document-education-357514.jpg">
               </div>
               <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Documentation Page<i
+                <span class="card-title activator grey-text text-darken-4 project-tile">Documentation Page<i
                     class="material-icons right">more_vert</i></span>
                 <p><a href="https://lionwebdesign.github.io/Technical-Documentation-Page/" target="_blanck">Read the
                     documentation</a></p>
@@ -254,7 +254,7 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <!-- Tester de freecodecamp -->
-  <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   <!-- JavaScript -->
   <script src="./JS/js.js"></script>
 </body>
